/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package core.net.sequences;

option java_package = "com.subterranean_security.crimson.proto.core.net.sequences";

import "com/subterranean_security/crimson/core/net/sequences/Delta.proto";
import "com/subterranean_security/crimson/core/Misc.proto";

message RQ_KeyChallenge {
	string group_name = 1;
	string magic = 2;
}

message RS_KeyChallenge {
	string result = 1;
}

message RQ_PassChallenge {
	string magic = 1;
}

message RS_PassChallenge {
	string result = 1;
}

message M1_ChallengeResult {
	bool result = 1;
}

// Initiates an authentication attempt
message M1_AuthAttempt {

	// The type of authentication being requested
	string auth_type = 1;
	
	// The name of the authentication group if auth_type is key authentication
	string group_name = 2;
}

// Uses generic rs_outcome rather than a new RS_* type
message RQ_CreateAuthGroup {
	EV_ProfileDelta pd = 1;
}

// Uses generic rs_outcome rather than a new RS_* type
message RQ_RemoveAuthGroup {
	int32 id = 1;
}

